--- a/style.css
+++ b/style.css
@@ -1,25 +1,21 @@
-body {
-    font-family: Arial;
-    background-color: #f7f7f7;
-    padding: 20px;
-}
-
-h1 {
-    color: darkblue;
-}
-
 table {
     width: 80%;
     border-collapse: collapse;
-    margin-top: 20px;
+    margin: 20px auto;
+    font-family: Arial, sans-serif;
 }
 
 th, td {
-    border: 2px solid black;
+    border: 2px solid #f4c542; /* light yellow border */
     padding: 10px;
     text-align: left;
 }
 
 th {
-    background-color: #d7e9ff;
+    background-color: #fff7cc;
+    font-weight: bold;
+}
+
+tr:nth-child(even) td {
+    background-color: #fffdf2;
 }
